# einsum-in-depth

./: .gitignore  README.md  verify_consistency.py
frontend/: .gitignore  Broadcast_explanation.ml  Colors.ml  Contraction_explanation.ml  Cytoscape.ml  Einsum_explanation.ml  Frontend_util.ml  Isometric.ml  Isometric.mli  Tensor_diagram.ml  Tensor_diagram.mli  Tensor_playground_web.ml  Vector_matrix_explanation.ml  dune  index.html  index.js  output.css  package.json  pnpm-lock.yaml  style.css  tailwind.config.js  tensor-diagrams.js
lib/: Asserted_equality.ml  Counter.ml  Counter.mli  Einops.ml  Einsum_lexer.mll  Einsum_parser.messages  Einsum_parser.ml  Einsum_parser.mli  Einsum_parser.mly  Einsum_parser_messages.ml  Einsum_parser_runner.ml  Einsum_parser_test.ml  Lexer.mll  Numpy.ml  Parser_test.ml  Path_parser.ml  Tensor_type.ml  Type_lexer.mll  Type_parser.messages  Type_parser.mly  Type_parser_messages.ml  Type_parser_runner.ml  Type_parser_test.ml  Util.ml  dune
test/: Parser_test.ml  dune
