(executable
 (name tensor_playground_web)
 (modes js)
 (modules Broadcast_explanation Isometric Tensor_playground_web)
 (js_of_ocaml
  (javascript_files isometric.js))
 (libraries brr brr.note fmt note tensor_playground))

(rule
 (targets tensor_playground_web.js)
 (deps tensor_playground_web.bc.js)
 (action
  (run cp %{deps} %{targets})))

(alias
 (name app)
 (deps tensor_playground_web.js index.html))
