(executable
 (name tensor_playground_web)
 (modes js)
 (modules
  Broadcast_explanation
  Cytoscape
  Contraction_explanation
  Einsum_explanation
  Frontend_util
  Isometric
  Tensor_diagram
  Tensor_playground_web
  Vector_matrix_explanation)
 (js_of_ocaml
  (javascript_files isometric.js))
 (libraries brr brr_svg fmt note note.brr tensor_playground))

(rule
 (targets tensor_playground_web.js)
 (deps tensor_playground_web.bc.js)
 (action
  (run cp %{deps} %{targets})))

(alias
 (name app)
 (deps tensor_playground_web.js index.html))
